--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,75 @@
-{% extends "base.html" %} {% block title %}{{name}}{% endblock %} {%block head
-%} {{ super() }}
-<style type="text/css">
-  .important {
-    color: #336699;
-  }
-</style>
-{% endblock %} {% block content %}
-<h1>{{name}}</h1>
-<p class="important">Welcome to my awesome <strong>{{name}}</strong>.</p>
+{% extends "base.html" %} {% block title %}{{ name }}{% endblock %} {% block
+hero_saction %}
+
+<!-- Hero section -->
+<section id="home" class="pt-36">
+  <div class="container">
+    <div class="flex flex-wrap">
+      <div class="w-full self-center px-4 lg:w-1/2">
+        <!-- Welcome message -->
+        <h1 class="text-base font-semibold text-teal-500 md:text-xl">
+          Selamat Datang, Saya
+          <span class="block font-bold text-gray-800 text-4xl mt-1"
+            >Akbar Fitriawan
+          </span>
+        </h1>
+
+        <p
+          class="font-medium text-lg text-blue-950 mb-5 leading-relaxed lg:text-2xl"
+        >
+          Data Scientist & Python Developer
+        </p>
+
+        <!-- Quote -->
+        <p class="font-medium text-gray-600 mb-10 mx-auto">
+          "Berinovasi dalam analisis data dan pemrograman Python untuk masa
+          depan berbasis AI dan Machine Learning."
+        </p>
+
+        <!-- Buttons for portfolio and resume -->
+        <div class="px-2 flex space-x-4">
+          <a
+            href="{{ url_for('main.portfolio') }}"
+            class="bg-indigo-600 text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-indigo-700 transition duration-300 ease-in-out"
+            >Lihat Portofolio</a
+          >
+          <a
+            href="#contact"
+            class="bg-transparent border-2 border-white text-gray-600 font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-white hover:text-indigo-600 transition duration-300 ease-in-out"
+            >Unduh Resume</a
+          >
+        </div>
+      </div>
+      <div class="w-full self-end px-4 lg:w-1/2">
+        <div class="relative mt-10 lg:mt-10 lg:right-0">
+          <img
+            src="/static/images/akbar.png"
+            alt="Akbar"
+            class="max-w-full mx-auto"
+          />
+
+          <span
+            class="absolute -bottom-0 -top-1 -z-10 left-1/2 -translate-x-1/2"
+          >
+            <svg
+              width="450"
+              height="450"
+              viewBox="0 0 200 200"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill="#0B192C"
+                d="M36.9,-46.1C49,-33.8,60.8,-23.3,59.6,-13C58.4,-2.8,44.2,7.3,34.8,16.9C25.4,26.5,20.9,35.7,10.6,47.2C0.4,58.8,-15.6,72.7,-25.3,69.3C-35,65.9,-38.5,45.1,-46.9,28.2C-55.3,11.4,-68.6,-1.5,-68.2,-13.5C-67.8,-25.4,-53.8,-36.4,-40.1,-48.4C-26.5,-60.4,-13.2,-73.5,-0.4,-73C12.4,-72.5,24.8,-58.4,36.9,-46.1Z"
+                transform="translate(100 100) scale(1.1)"
+              />
+            </svg>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- end hero section -->
+
 {% endblock %}
