--- a/app/templates/snippets/footer.html
+++ b/app/templates/snippets/footer.html
@@ -1,4 +1,4 @@
-<!-- <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+<footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
   <div class="container mx-auto flex flex-col items-center">
     <div class="flex space-x-4 mb-4">
       <a href="https://twitter.com" target="_blank">
@@ -16,17 +16,17 @@
       <a href="https://github.com" target="_blank">
         <i class="fab fa-github text-white hover:text-gray-500"></i>
       </a>
-    </div> -->
-<!-- Copyright text -->
-<!-- <p class="text-center text-sm">
+    </div>
+    <!-- Copyright text -->
+    <p class="text-center text-sm">
       Copyright &copy; {{ current_year }}
       <a href="/" class="text-pink-500">{{owner_name}}</a>. All Rights Reserved.
-    </p> -->
+    </p>
 
-<!-- Links to terms and policy -->
-<!-- <div class="flex space-x-4 text-sm mt-2 py-3 mx-auto mb-2">
+    <!-- Links to terms and policy -->
+    <div class="flex space-x-4 text-sm mt-2 py-3 mx-auto mb-2">
       <a href="#" class="hover:underline">Terms & Policy</a>
       <a href="#" class="hover:underline">Disclaimer</a>
     </div>
   </div>
-</footer> -->
+</footer>
