--- a/app/templates/snippets/navbar.html
+++ b/app/templates/snippets/navbar.html
@@ -1,12 +1,13 @@
-<!-- <nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 mt-10">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="#home" class="flex items-center space-x-3 rtl:space-x-reverse">
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        ><strong>Akbar</strong> <i class="text-teal-500">Fitriawan</i></span
       >
+        <strong>Akbar</strong> <i class="text-teal-500">Fitriawan</i>
+      </span>
     </a>
     <button
       data-collapse-toggle="navbar-default"
@@ -36,12 +37,12 @@
       <ul
         class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
+        <!-- Each link points to a section on the same page -->
         {% for link in nav_links %}
         <li>
           <a
-            href="{{ url_for(link.url) }}"
+            href="#{{ link.url }}"
             class="block py-2 px-3 text-teal-500 rounded md:bg-transparent md:text-green-700 md:p-0 dark:text-slate-800 md:dark:text-green-700"
-            aria-current="page"
             >{{ link.name }}</a
           >
         </li>
@@ -49,4 +50,4 @@
       </ul>
     </div>
   </div>
-</nav> -->
+</nav>
