--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,53 +1,88 @@
 <section id="about" class="py-16 bg-gray-100">
-  <div class="container mx-auto px-4">
-    <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">About Me</h2>
+  <div class="container mx-auto px-8">
+    <h2 class="text-4xl font-bold text-center text-teal-600 mb-6">About Me</h2>
 
-    <div class="md:flex md:items-center md:justify-between">
-      <!-- Profile Image -->
-      <div class="md:w-1/3 mb-8 md:mb-0">
-        <img
-          src="your-profile-image.jpg"
-          alt="Profile Image"
-          class="rounded-full mx-auto w-48 h-48 object-cover"
-        />
-      </div>
-
+    <div class="flex flex-wrap items-center">
       <!-- Description -->
-      <div class="md:w-2/3">
-        <p class="text-lg text-gray-700 mb-4">
-          Hello! I'm a passionate
-          <span class="font-semibold">Data Scientist</span> and
-          <span class="font-semibold">Python Developer</span> with a knack for
-          transforming data into meaningful insights and crafting efficient code
-          solutions. With years of experience working with machine learning,
-          data analysis, and web development, I have honed my skills to solve
-          complex problems and deliver data-driven results.
+      <div class="w-full md:w-2/3 px-4 py-3 mx-auto">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Say Note</h3>
+        <p class="text-lg text-gray-700 mb-4 md:px-8">
+          Hi, I'm <strong>Akbar Fitriawan</strong>, an aspiring Data Scientist
+          with a passion for Python programming and machine learning. I enjoy
+          solving problems with data and am continually learning new tools and
+          techniques in this rapidly growing field.
         </p>
-
-        <p class="text-lg text-gray-700 mb-4">
-          As a Data Scientist, I excel in leveraging
-          <span class="font-semibold">statistical analysis</span>,
-          <span class="font-semibold">predictive modeling</span>, and
-          <span class="font-semibold">data visualization</span> to support
-          strategic decision-making. My expertise in Python, combined with
-          various data tools like <span class="font-semibold">Pandas</span>,
-          <span class="font-semibold">NumPy</span>,
-          <span class="font-semibold">Scikit-learn</span>, and
-          <span class="font-semibold">TensorFlow</span>, enables me to create
-          end-to-end solutions for machine learning projects.
+        <p class="text-lg text-gray-700 mb-4 md:px-8">
+          I’ve worked on several personal projects, where I built predictive
+          models and explored data visualization. Currently, I am focusing on
+          enhancing my skills through online courses and real-world practice.
         </p>
-
-        <p class="text-lg text-gray-700">
-          As a Python Developer, I build scalable and robust applications,
-          focusing on clean and maintainable code. I’m also experienced in
-          developing RESTful APIs, automating workflows, and building web
-          applications using frameworks like
-          <span class="font-semibold">Flask</span> and
-          <span class="font-semibold">Django</span>. I believe in lifelong
-          learning and continuously expanding my knowledge in both data science
-          and software development to stay ahead of the curve.
+        <p class="text-lg text-gray-700 md:px-8">
+          My goal is to apply my growing expertise to meaningful data-driven
+          projects and continue my journey in the world of data science.
         </p>
       </div>
+
+      <div class="w-full md:w-1/3 px-4 py-3">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8">
+          // Personal Details
+        </h3>
+        <ul class="font-base">
+          <li class="text-lg text-gray-700 mb-1 md:px-6">
+            Nama: Akbar Fitriawan
+          </li>
+          <li class="text-lg text-gray-700 mb-1 md:px-6">
+            Tanggal Lahir: 27-Desember-2000
+          </li>
+          <li class="text-lg text-gray-700 mb-1 md:px-6">Umur: 25 Tahun</li>
+          <li class="text-lg text-gray-700 mb-1 md:px-6">
+            Domisili: Jakarta Selatan
+          </li>
+          <li class="text-lg text-gray-700 mb-1 md:px-6">
+            Email: akbarfitriawan12@gmail.com
+          </li>
+          <li class="text-lg text-gray-700 mb-1 md:px-6">
+            Telephone: +6285156919521
+          </li>
+          <li class="text-lg text-gray-700 mb-1 md:px-6">
+            Freelance: Available
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <hr class="h-px my-8 bg-gray-200" />
+
+    <div class="flex flex-wrap">
+      <div class="w-full md:w-1/2 px-4 py-3">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Skills</h3>
+      </div>
+      <div class="w-full md:w-1/2 px-4 py-3">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8">
+          // Certificate
+        </h3>
+      </div>
+    </div>
+
+    <hr class="h-px my-8 bg-gray-200" />
+
+    <div class="flex flex-wrap">
+      <div class="w-full md:w-1/2 px-4 py-3">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Education</h3>
+      </div>
+      <div class="w-full md:w-1/2 px-4 py-3">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8">
+          // Experience
+        </h3>
+      </div>
+    </div>
+
+    <div class="flex justify-center mt-6">
+      <a
+        href="/"
+        class="bg-slate-700 text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-indigo-700 transition duration-300 ease-in-out"
+        >Download CV</a
+      >
     </div>
   </div>
 </section>
