--- a/app/templates/hero_section.html
+++ b/app/templates/hero_section.html
@@ -1,8 +1,8 @@
 <!-- Hero section -->
-<section id="home" class="pt-24">
-  <div class="container">
+<section id="hero_saction" class="pt-24">
+  <div class="container mx-auto">
     <div class="flex flex-wrap">
-      <div class="w-full self-center px-6 py-2 lg:w-1/2">
+      <div class="w-full self-center px-4 py-2 lg:w-1/2">
         <!-- Welcome message -->
         <h1 class="text-base font-semibold text-teal-500 md:text-xl">
           Selamat Datang, Saya
@@ -28,16 +28,11 @@
           <a
             href="/"
             class="bg-indigo-600 text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-indigo-700 transition duration-300 ease-in-out"
-            >Lihat Portofolio</a
-          >
-          <a
-            href="#contact"
-            class="bg-transparent border-2 border-white text-gray-600 font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-white hover:text-indigo-600 transition duration-300 ease-in-out"
-            >Unduh Resume</a
+            >Hubungi Saya</a
           >
         </div>
       </div>
-      <div class="w-full self-end px-4 lg:w-1/2">
+      <div class="w-full self-end px-4 py-2 lg:w-1/2">
         <div class="relative mt-10 lg:mt-9 lg:right-0">
           <img
             src="/static/images/akbar.png"
