modify about section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,28 +2,29 @@
 content %}
 
 <!-- hero_saction -->
-{% block hero_saction %} {% include 'hero_section.html' %} {% endblock %}
+{% block hero_saction %} {% include 'snippets/hero_section.html' %} {% endblock
+%}
 <!-- end hero_saction -->
 
 <!-- about -->
-{% block about_section %} {% include 'about.html' %} {% endblock %}
+{% block about_section %} {% include 'snippets/about.html' %} {% endblock %}
 <!-- end about -->
 
 <!-- services -->
-{% block services %} {% include 'services.html' %}{% endblock %}
+{% block services %} {% include 'snippets/services.html' %}{% endblock %}
 <!-- end services -->
 
 <!-- portfolio -->
-{% block portfolio %} {% include 'portfolio.html' %}{% endblock %}
+{% block portfolio %} {% include 'snippets/portfolio.html' %}{% endblock %}
 <!-- end portfolio -->
 
 <!-- blog -->
-{% block blog %} {% include 'blog.html' %} {% endblock %}
+{% block blog %} {% include 'snippets/blog.html' %} {% endblock %}
 <!-- end blog -->
 
 <!-- contact -->
 
-{% block contact %} {% include 'contact.html' %} {% endblock %}
+{% block contact %} {% include 'snippets/contact.html' %} {% endblock %}
 <!-- end contact -->
 
 {% endblock %}
