--- a/app/templates/snippets/navbar.html
+++ b/app/templates/snippets/navbar.html
@@ -1,53 +1,69 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900 mt-10">
-  <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-  >
-    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-      >
-        <strong>Akbar</strong> <i class="text-teal-500">Fitriawan</i>
-      </span>
-    </a>
-    <button
-      data-collapse-toggle="navbar-default"
-      type="button"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-      aria-controls="navbar-default"
-      aria-expanded="false"
+<nav
+  class="bg-white border-gray-200 dark:bg-gray-900 sticky top-0 z-50 transition-colors duration-500 ease-in-out delay-100"
+>
+  <div class="container mx-auto">
+    <div
+      class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
     >
-      <span class="sr-only">Open main menu</span>
-      <svg
-        class="w-5 h-5"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 17 14"
+      <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <span
+          class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        >
+          <strong>Akbar</strong>
+          <i class="text-teal-500">Fitriawan</i>
+        </span>
+      </a>
+      <button
+        data-collapse-toggle="navbar-default"
+        type="button"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 transition-transform duration-300 ease-in-out delay-100"
+        aria-controls="navbar-default"
+        aria-expanded="false"
       >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M1 1h15M1 7h15M1 13h15"
-        />
-      </svg>
-    </button>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        <span class="sr-only">Open Menu</span>
+        <svg
+          class="w-5 h-5"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 17 14"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M1 1h15M1 7h15M1 13h15"
+          />
+        </svg>
+      </button>
+
+      <!-- <button
+        id="hamburger"
+        name="hamburger"
+        type="button"
+        class="block absolute right-4"
       >
-        <!-- Each link points to a section on the same page -->
-        {% for link in nav_links %}
-        <li>
-          <a
-            href="#{{ link.url }}"
-            class="block py-2 px-3 text-teal-500 rounded md:bg-transparent md:text-green-700 md:p-0 dark:text-slate-800 md:dark:text-green-700"
-            >{{ link.name }}</a
-          >
-        </li>
-        {% endfor %}
-      </ul>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button> -->
+
+      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+        <ul
+          class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        >
+          {% for link in nav_links %}
+          <li>
+            <a
+              href="#{{ link.url }}"
+              class="block py-2 px-3 text-teal-500 rounded md:bg-transparent md:text-green-700 md:p-0 dark:text-slate-800 md:dark:text-green-700"
+              >{{ link.name }}</a
+            >
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
