--- a/app/templates/snippets/about.html
+++ b/app/templates/snippets/about.html
@@ -1,5 +1,5 @@
 <section id="about" class="py-16 bg-gray-100">
-  <div class="container">
+  <div class="container mx-auto p-4">
     <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">About Me</h2>
 
     <div class="flex flex-wrap">
@@ -224,7 +224,8 @@
 
     <div class="flex justify-center my-8">
       <a
-        href="/"
+        href="https://drive.google.com/file/d/1Y5bksKx9NDWcxNAFg6fMVZm5QZF-qvbo/view?usp=sharing"
+        target="_blank"
         class="bg-slate-700 text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-indigo-700 transition duration-300 ease-in-out"
         >Download CV</a
       >
