--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,6 @@
   </head>
   <body>
     <!-- navbar -->
-
     {% include "snippets/navbar.html" %}
 
     <!-- end navbar -->
@@ -28,5 +27,6 @@
 
     <!-- end footer -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script src="{{ url_for('static', filename='dist/js/script.js') }}"></script>
   </body>
 </html>
