--- a/app/templates/snippets/hero_section.html
+++ b/app/templates/snippets/hero_section.html
@@ -1,8 +1,8 @@
 <!-- Hero section -->
 <section id="hero_saction" class="pt-24">
-  <div class="container mx-auto px-16 md:px-3">
+  <div class="container">
     <div class="flex flex-wrap">
-      <div class="w-full self-center px-4 py-2 lg:w-1/2">
+      <div class="w-full self-center px-8 py-4 lg:w-1/2">
         <!-- Welcome message -->
         <h1 class="text-base font-semibold text-teal-500 md:text-xl">
           Selamat Datang, Saya
