--- a/app/templates/snippets/navbar.html
+++ b/app/templates/snippets/navbar.html
@@ -1,7 +1,7 @@
-<nav
+<!-- <nav
   class="bg-white border-gray-200 dark:bg-gray-900 sticky top-0 z-50 transition-colors duration-500 ease-in-out delay-100"
 >
-  <div class="container mx-auto">
+  <div class="container mx-auto py-3">
     <div
       class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
     >
@@ -12,7 +12,7 @@
           <strong>Akbar</strong>
           <i class="text-teal-500">Fitriawan</i>
         </span>
-      </a>
+      </a>  
       <button
         data-collapse-toggle="navbar-default"
         type="button"
@@ -38,17 +38,6 @@
         </svg>
       </button>
 
-      <!-- <button
-        id="hamburger"
-        name="hamburger"
-        type="button"
-        class="block absolute right-4"
-      >
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-      </button> -->
-
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
         <ul
           class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
@@ -66,4 +55,57 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> -->
+
+<header
+  class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10"
+>
+  <div class="container">
+    <div class="flex items-center justify-between relative">
+      <div class="px-4">
+        <a href="/" class="block font-bold text-lg py-6">
+          <span class="self-center text-2xl font-semibold text-slate-900">
+            <strong>Akbar</strong>
+            <i class="text-teal-500">Fitriawan</i>
+          </span>
+        </a>
+      </div>
+
+      <div class="flex item-center px-4">
+        <button
+          id="hamburger"
+          name="hamburger"
+          type="button"
+          class="absolute block right-4 top-5"
+        >
+          <span
+            class="hamburger-line transition duration-300 ease-in-out origin-top-left"
+          ></span>
+          <span
+            class="hamburger-line transition duration-300 ease-in-out"
+          ></span>
+          <span
+            class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"
+          ></span>
+        </button>
+
+        <nav
+          id="nav-menu"
+          class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full"
+        >
+          <ul class="block">
+            {% for link in nav_links %}
+            <li class="group">
+              <a
+                href="#{{ link.url }}"
+                class="text-base text-slate-700 py-2 mx-8 group-hover:text-teal-700"
+                >{{ link.name }}</a
+              >
+            </li>
+            {% endfor %}
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
