--- a/app/templates/snippets/hero_section.html
+++ b/app/templates/snippets/hero_section.html
@@ -1,5 +1,5 @@
 <!-- Hero section -->
-<section id="hero_saction" class="pt-24">
+<section id="home" class="pt-36 pb-16">
   <div class="container">
     <div class="flex flex-wrap">
       <div class="w-full self-center px-8 py-4 lg:w-1/2">
@@ -37,18 +37,23 @@
           <img
             src="/static/images/akbar.png"
             alt="Akbar"
-            class="max-w-full mx-auto rounded-lg  "
+            class="max-w-full mx-auto rounded-lg"
           />
 
           <span
             class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125"
           >
-            <svg 
-            width="400"
-            height="400"
-            viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0B192C" d="M48.3,-58.5C61.9,-46.1,71.8,-30.3,74.7,-13.3C77.6,3.7,73.5,21.9,64,35.8C54.6,49.6,39.8,59.2,24.4,63.1C8.9,67.1,-7.1,65.5,-25.6,62.3C-44.1,59.1,-65,54.4,-74.2,41.4C-83.3,28.5,-80.6,7.4,-77,-13.6C-73.4,-34.6,-68.7,-55.5,-55.7,-68.1C-42.7,-80.6,-21.4,-84.8,-2,-82.4C17.3,-80,34.7,-71,48.3,-58.5Z" transform="translate(100 100) scale(1.1)" />
-            </svg>
+            <svg
+              width="400"
+              height="400"
+              viewBox="0 0 200 200"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill="#0B192C"
+                d="M48.3,-58.5C61.9,-46.1,71.8,-30.3,74.7,-13.3C77.6,3.7,73.5,21.9,64,35.8C54.6,49.6,39.8,59.2,24.4,63.1C8.9,67.1,-7.1,65.5,-25.6,62.3C-44.1,59.1,-65,54.4,-74.2,41.4C-83.3,28.5,-80.6,7.4,-77,-13.6C-73.4,-34.6,-68.7,-55.5,-55.7,-68.1C-42.7,-80.6,-21.4,-84.8,-2,-82.4C17.3,-80,34.7,-71,48.3,-58.5Z"
+                transform="translate(100 100) scale(1.1)"
+              />
             </svg>
           </span>
         </div>
