--- a/app/templates/snippets/about.html
+++ b/app/templates/snippets/about.html
@@ -1,10 +1,10 @@
-<section id="about" class="py-16 bg-gray-100">
+<section id="about" class="pt-32 pb-16 bg-gray-100">
   <div class="container mx-auto p-4">
     <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">About Me</h2>
 
     <div class="flex flex-wrap">
       <!-- Description -->
-      <div class="w-full md:w-1/2 px-4 py-3">
+      <div class="w-full md:w-1/2 px-6 py-10">
         <h3 class="text-2xl font-semibold text-slate-600 mb-8">
           // Background
         </h3>
@@ -25,21 +25,21 @@
         </p>
       </div>
 
-      <div class="w-full md:w-1/2 px-4 py-3">
+      <div class="w-full md:w-1/2 px-6 py-10">
         <h3 class="text-2xl font-semibold text-slate-600 mb-8">
           // Personal Details
         </h3>
         <ul class="list-none space-y-2">
           <li class="flex flex-wrap">
-            <span class="w-36 font-semibold text-gray-500">Nama:</span
+            <span class="w-36 font-semibold text-gray-500">Name:</span
             ><span>{{ personal_details.name}} </span>
           </li>
           <li class="flex flex-wrap">
-            <span class="w-36 font-semibold text-gray-500">Tanggal Lahir:</span
-            ><span>{{personal_details.birth_date}}</span>
+            <span class="w-36 font-semibold text-gray-500">Age:</span
+            ><span>{{personal_details.age}}</span>
           </li>
           <li class="flex flex-wrap">
-            <span class="w-36 font-semibold text-gray-500">Domisili:</span>
+            <span class="w-36 font-semibold text-gray-500">Recidence:</span>
             <span>{{personal_details.residence}}</span>
           </li>
           <li class="flex flex-wrap">
@@ -193,13 +193,14 @@
               >2022 - 2023</time
             >
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              Usaha Mandiri
+              Self-Employed
             </h3>
             <p
               class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"
             >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Accusamus, repudiandae? Sequi, est.
+              Entrepreneur dalam bidang kuliner selama [tahun]. Bertanggung
+              jawab atas pengelolaan operasional, pemasaran, dan penjualan
+              produk.
             </p>
           </li>
           <li class="mb-10 ms-4">
@@ -211,7 +212,7 @@
               >Agustus 2020 - Mei 2021</time
             >
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              Koordinator Operasional Suplai
+              Supply Operations Coordinator
             </h3>
             <p class="text-base font-normal text-gray-500 dark:text-gray-400">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
