--- a/app/templates/snippets/navbar.html
+++ b/app/templates/snippets/navbar.html
@@ -76,7 +76,7 @@
           id="hamburger"
           name="hamburger"
           type="button"
-          class="absolute block right-4 top-5"
+          class="absolute block right-4 top-5 lg:hidden"
         >
           <span
             class="hamburger-line transition duration-300 ease-in-out origin-top-left"
@@ -91,14 +91,14 @@
 
         <nav
           id="nav-menu"
-          class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full"
+          class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none"
         >
-          <ul class="block">
+          <ul class="block lg:flex">
             {% for link in nav_links %}
             <li class="group">
               <a
                 href="#{{ link.url }}"
-                class="text-base text-slate-700 py-2 mx-8 group-hover:text-teal-700"
+                class="text-base text-slate-700 py-2 mx-8 group-hover:text-teal-700 flex"
                 >{{ link.name }}</a
               >
             </li>
