--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@ content %}
 <!-- end about -->
 
 <!-- services -->
-{% block services %} {% include 'snippets/services.html' %}{% endblock %}
+<!-- {% block services %} {% include 'snippets/services.html' %}{% endblock %} -->
 <!-- end services -->
 
 <!-- portfolio -->
