--- a/app/templates/snippets/hero_section.html
+++ b/app/templates/snippets/hero_section.html
@@ -19,8 +19,9 @@
 
         <!-- Quote -->
         <p class="font-medium text-gray-600 mb-10 mx-auto">
-          "Berinovasi dalam analisis data dan pemrograman Python untuk masa
-          depan berbasis AI dan Machine Learning."
+          A Data Scientist with 1 year experience. I specialize in data analysis
+          and applying machine learning to create effective solutions. I am
+          ready to contribute and develop in a dynamic environment.
         </p>
 
         <!-- Buttons for portfolio and resume -->
