--- a/app/templates/snippets/about.html
+++ b/app/templates/snippets/about.html
@@ -1,4 +1,4 @@
-<section id="about" class="pt-32 pb-16 bg-gray-100">
+<section id="about" class="pt-32 pb-16 bg-white">
   <div class="container">
     <!-- tittle section -->
     <div class="w-full p-4">
@@ -35,7 +35,7 @@
 
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
         <h3 class="text-2xl font-semibold text-slate-600 mb-8">
-          Personal Details
+          // Personal Details
         </h3>
         <ul class="list-none space-y-4">
           <li class="flex flex-wrap">
@@ -58,152 +58,249 @@
             <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Telephone:</span>
             <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.phone }}</p>
           </li>
-          <li class="flex flex-wrap">
-            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Freelance:</span>
-            <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.status }}</p>
-          </li>
         </ul>
       </div>
       
+    </div>
+      
 
-    <hr class="h-px my-8 bg-gray-200" />
+    <hr class="h-px my-8 bg-slate-400 border-0 dark:bg-gray-700 mx-auto">
+
+
 
     <!-- about 2 -->
 
     <div class="flex flex-wrap">
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
         <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Skills</h3>
-        <div class="flex flex-wrap">
+
+        <div class="w-full p-2">
           <h3 class="text-lg font-semibold mb-4">Programming Languages</h3>
           
-          <div class="w-full grid grid-cols-4 gap-4 mb-6 ">
-          <div
-            class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap"
-          >
-            <span>
-              <svg
-                width="16"
-                height="16"
-                class="w-[25px] h-[25px] mr-1"
-                role="img"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <title>Python</title>
-                <path
-                  d="M14.25.18l.9.2.73.26.59.3.45.32.34.34.25.34.16.33.1.3.04.26.02.2-.01.13V8.5l-.05.63-.13.55-.21.46-.26.38-.3.31-.33.25-.35.19-.35.14-.33.1-.3.07-.26.04-.21.02H8.77l-.69.05-.59.14-.5.22-.41.27-.33.32-.27.35-.2.36-.15.37-.1.35-.07.32-.04.27-.02.21v3.06H3.17l-.21-.03-.28-.07-.32-.12-.35-.18-.36-.26-.36-.36-.35-.46-.32-.59-.28-.73-.21-.88-.14-1.05-.05-1.23.06-1.22.16-1.04.24-.87.32-.71.36-.57.4-.44.42-.33.42-.24.4-.16.36-.1.32-.05.24-.01h.16l.06.01h8.16v-.83H6.18l-.01-2.75-.02-.37.05-.34.11-.31.17-.28.25-.26.31-.23.38-.2.44-.18.51-.15.58-.12.64-.1.71-.06.77-.04.84-.02 1.27.05zm-6.3 1.98l-.23.33-.08.41.08.41.23.34.33.22.41.09.41-.09.33-.22.23-.34.08-.41-.08-.41-.23-.33-.33-.22-.41-.09-.41.09zm13.09 3.95l.28.06.32.12.35.18.36.27.36.35.35.47.32.59.28.73.21.88.14 1.04.05 1.23-.06 1.23-.16 1.04-.24.86-.32.71-.36.57-.4.45-.42.33-.42.24-.4.16-.36.09-.32.05-.24.02-.16-.01h-8.22v.82h5.84l.01 2.76.02.36-.05.34-.11.31-.17.29-.25.25-.31.24-.38.2-.44.17-.51.15-.58.13-.64.09-.71.07-.77.04-.84.01-1.27-.04-1.07-.14-.9-.2-.73-.25-.59-.3-.45-.33-.34-.34-.25-.34-.16-.33-.1-.3-.04-.25-.02-.2.01-.13v-5.34l.05-.64.13-.54.21-.46.26-.38.3-.32.33-.24.35-.2.35-.14.33-.1.3-.06.26-.04.21-.02.13-.01h5.84l.69-.05.59-.14.5-.21.41-.28.33-.32.27-.35.2-.36.15-.36.1-.35.07-.32.04-.28.02-.21V6.07h2.09l.14.01zm-6.47 14.25l-.23.33-.08.41.08.41.23.33.33.23.41.08.41-.08.33-.23.23-.33.08-.41-.08-.41-.23-.33-.33-.23-.41-.08-.41.08z"
-                />
-              </svg>
-            </span>
-            <p class="text-base">Python</p>
-          </div>
-          <div
-            class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap"
-          >
-            <span>
-              <svg
-                width="16"
-                height="16"
-                class="w-[25px] h-[25px] mr-1"
-                role="img"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <title>HTML5</title>
-                <path
-                  d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z"
-                />
-              </svg>
-            </span>
-            <p class="text-base">HTML</p>
-          </div>
-          <div
-            class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap"
-          >
-            <span>
-              <svg
-                width="16"
-                height="16"
-                class="w-[25px] h-[25px] mr-1"
-                role="img"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <title>CSS3</title>
-                <path
-                  d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z"
-                />
-              </svg>
-            </span>
-           <p class="text-base">CSS</p>
-          </div>
-          <div
-            class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap"
-          >
-            <span>
-              <?xml version="1.0" encoding="UTF-8"?>
-              <svg
-                width="16"
-                height="16"
-                class="w-[25px] h-[25px] mr-1"
-                xmlns="http://www.w3.org/2000/svg"
-                id="Layer_1"
-                data-name="Layer 1"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M24,22v1h-4V15h1v7h3Zm-12.626-3.471c-.31-.117-1.189-.466-1.523-.67-.325-.231-.477-.568-.428-.948,.053-.399,.316-.723,.687-.845,.561-.185,1.121-.008,1.768,.553l.655-.756c-.915-.793-1.835-1.045-2.736-.747-.739,.244-1.262,.881-1.366,1.666-.096,.743,.218,1.45,.88,1.917,.492,.305,1.587,.721,1.699,.763,1.052,.425,1.013,1.204,.976,1.431-.104,.641-.669,1.105-1.342,1.105-.525,0-1.348-.368-1.761-.787l-.712,.702c.526,.533,1.595,1.085,2.473,1.085,1.166,0,2.146-.818,2.33-1.945,.131-.812-.206-1.959-1.599-2.523Zm7.21,3.34l.77,.77-.707,.707-.77-.77c-.395,.262-.868,.417-1.376,.417-1.378,0-2.5-1.122-2.5-2.5v-3c0-1.378,1.122-2.5,2.5-2.5s2.5,1.122,2.5,2.5v3c0,.509-.154,.981-.417,1.376Zm-1.441-.027l-.496-.496,.707-.707,.496,.496c.094-.196,.15-.412,.15-.643v-3c0-.827-.673-1.5-1.5-1.5s-1.5,.673-1.5,1.5v3c0,.827,.673,1.5,1.5,1.5,.231,0,.447-.057,.643-.15Zm-11.143-4.055v1.017c-2.173-.343-3.959-1.12-5-2.155v2.851c0,1.49,2.122,2.794,5,3.287v1.021c-3.509-.553-6-2.247-6-4.308V4.5C0,1.977,3.733,0,8.5,0s8.5,1.977,8.5,4.5V13h-1v-1.351c-1.419,1.411-4.213,2.351-7.5,2.351s-6.081-.94-7.5-2.351v2.851c0,1.49,2.122,2.794,5,3.287ZM1,4.5c0,1.897,3.435,3.5,7.5,3.5s7.5-1.603,7.5-3.5-3.435-3.5-7.5-3.5S1,2.603,1,4.5Zm0,5c0,1.897,3.435,3.5,7.5,3.5s7.5-1.603,7.5-3.5v-2.851c-1.419,1.411-4.213,2.351-7.5,2.351s-6.081-.94-7.5-2.351v2.851Z"
-                />
-              </svg>
-            </span>
-          <p class="text-base">SQL</p>
-          </div>
+          <div class="grid grid-cols-2 gap-4 mb-6 md:grid-cols-4">
+            <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+              <span>
+                <img 
+                width="16" 
+                height="16" 
+                class="w-[25px] h-[25px] mr-1" 
+                src="{{ url_for('static', filename='/images/icons/python.svg') }}" />
+              </span>
+              <p>Python</p>
+            </div>
+
+            <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+              <span>
+                <img  
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1"
+                  src="{{ url_for('static', filename='/images/icons/html.svg') }}" alt="html"/>
+              </span>
+              <p>HTML</p>
+            </div>
           
+            <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+              <span>
+                <img 
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1"
+                  src="{{ url_for('static', filename='/images/icons/css.svg') }}" 
+                  alt="css" />
+
+              </span>
+              <p>CSS</p>
+            </div>
+
+            <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+              <span>
+                <img 
+                width="16"
+                height="16"
+                class="w-[25px] h-[25px] mr-1"
+                src="{{ url_for('static', filename='/images/icons/sql.svg') }}" alt="sql">
+              </span>
+              <p>SQL</p>
+          </div>
+        </div>
+
+        <div class="w-full p-2">
+          <h3 class="text-lg font-semibold mb-4">Frameworks & Libraries</h3>
+          <div class="flex flex-wrap">
+            <div class="grid grid-cols-2 gap-4 mb-6 md:grid-cols-4">
+
+              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img 
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1"
+                  src="{{ url_for('static', filename='/images/icons/django.svg') }}" alt="django">
+                </span>
+                <p>Django</p>
+              </div>
+  
+              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img 
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1"
+                  src="{{ url_for('static', filename='/images/icons/flask.svg') }}" alt="flask">
+                </span>
+                <p>Flask</p>
+              </div>
+  
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img 
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1
+                  grayscale"
+                  src="{{ url_for('static', filename='/images/icons/pandas.svg') }}" alt="pandas">
+                
+                </span>
+                <p>Pandas</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1"
+                   src="{{ url_for('static', filename='/images/icons/numpy.svg') }}" alt="numpy">
+                </span>
+                <p>Numpy</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img   
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1 grayscale"
+                  src="{{ url_for('static', filename='/images/icons/matplotlib.svg') }}" alt="matplotlib">
+                </span>
+                <p>Matplotlib</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img
+                    width="16"
+                    height="16"
+                    class="w-[25px] h-[25px] mr-1 grayscale"
+                   src="{{ url_for('static', filename='/images/icons/seaborn.svg') }}" alt="seaborn" />
+                </span>
+                <p>Seaborn</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img
+                  width="16"
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1" 
+                   src="{{ url_for('static', filename='/images/icons/scikit-learn.svg') }}" alt="scikit-learn">
+                </span>
+                <p>Scikit-learn</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img 
+                    width="16"
+                    height="16"
+                    class="w-[25px] h-[25px] mr-1 grayscale"
+                  src="{{ url_for('static', filename='/images/icons/tensorflow.svg') }}" alt="tensorflow">
+                
+              </span>
+                <p>Tensorflow</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                 <img 
+                 height="16"
+                 class="w-[25px] h-[25px] mr-1 grayscale"
+                 src="{{ url_for('static', filename='/images/icons/keras.svg') }}" alt="keras">
+                </span>
+                <p>Keras</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                  <img 
+                  height="16"
+                  class="w-[25px] h-[25px] mr-1 grayscale"
+                  src="{{ url_for('static', filename='/images/icons/tableau.svg') }}" alt="tableau">
+                </span>
+                <p>Tableau</p>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+
+        <div class="p-0">
+          <h3 class="text-lg font-semibold mb-4">Featured Skills</h3>
+          <div class="w-full p-2">
+            <div class="grid grid-cols-1 gap-4 mb-6 md:grid-cols-2">
+
+              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <p>Machine Learning</p>
+              </div>
+
+              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <p>Neural Networks, CNN, NLP</p>
+              </div>
+  
+              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+
+                <p>Data Preprocessing</p>
+              </div>
+  
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <p>Data Visualization</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <span>
+                <p>Statistical Procedures</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
+                <p>Data Cleaning & Wrangling</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">                  
+                <p>Version Control & Deployment</p>
+              </div>
+
+              <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">                  
+                <p>Web Development</p>
+              </div>
+
+            </div>
+          </div>
         </div>
 
         <div>
-          <h4 class="text-lg font-semibold mb-4">Frameworks & Libraries</h4>
-          <div class="flex flex-wrap ">
-            <div class=" grid grid-cols-4 gap-4 mb-6 ">
-              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
-                <span></span>
-                <p>Flask</p>
-              </div>
-  
-              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
-                <span></span>
-                <p>Flask</p>
-              </div>
-  
-              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
-                <span></span>
-                <p>Flask</p>
-              </div>
-              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
-                <span></span>
-                <p>Flask</p>
-              </div>
-              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
-                <span></span>
-                <p>Flask</p>
-              </div>
-              <div  class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
-                <span></span>
-                <p>Flask</p>
-              </div>
-            </div>
-          </div>
-
+          <h3 class="text-lg font-semibold mb-4">Expertise as Data Scientist</h3>
+          <span class="inline-block bg-blue-100 text-blue-800 text-md font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800">
+            Min. 1 year
+          </span>
         </div>
       </div>
-
-
-      </div>
+    </div>
 
 
       <div class="w-full lg:w-1/2 px-4 py-6 mb-8">
         <h3 class="text-2xl font-semibold text-slate-600 mb-6">
-          Certificates
+          // Certificates
         </h3>
       
         <ul class="list-none space-y-6 text-gray-700">
@@ -228,7 +325,7 @@
               <a
                 href="{{ cert.url }}"
                 target="_blank"
-                class="inline-flex font-medium text-blue-600 hover:underline"
+                class="inline-flex font-medium text-blue-600 hover:underline p-2"
                 >View
                 <svg
                   class="w-4 h-4 ml-2"
@@ -251,10 +348,11 @@
           {% endfor %}
         </ul>
       </div>
-      
+    </div>
 
-    <hr class="h-px my-8 bg-gray-200" />
-
+    <hr class="h-px my-8 bg-slate-400 border-0 dark:bg-gray-700 mx-auto">
+    
+    <!-- about 3 -->
     <div class="flex flex-wrap">
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
         <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Education</h3>
