--- a/app/templates/snippets/footer.html
+++ b/app/templates/snippets/footer.html
@@ -1,5 +1,5 @@
-<footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
-  <div class="container mx-auto flex flex-col items-center p-5">
+<footer class="bg-slate-800 dark:bg-gray-800 pt-6">
+  <div class="container mx-auto flex flex-col items-center p-5 text-white">
     <!-- Copyright text -->
     <p class="text-center text-sm">
       Copyright &copy; {{ current_year }}
