Update some features

--- a/app/templates/snippets/contact.html
+++ b/app/templates/snippets/contact.html
@@ -99,7 +99,19 @@
           </div>
         </div>
         <div class="w-full mb-12 p4 lg:w-1/2 mx-auto">
-          <form>
+          <div>
+            <!-- Tampilkan flash message -->
+            {% with messages = get_flashed_messages(with_categories=true) %} {%
+            if messages %}
+            <ul>
+              {% for category, message in messages %}
+              <li class="{{ category }}">{{ message }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %} {% endwith %}
+          </div>
+
+          <form action="{{ url_for('main.send_message') }}" method="POST">
             <div class="grid gap-2 mb-6 md:grid-cols-2">
               <div>
                 <label
@@ -110,6 +122,7 @@
                 <input
                   type="text"
                   id="name"
+                  name="name"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="John Doe"
                   required
@@ -124,6 +137,7 @@
                 <input
                   type="email"
                   id="email"
+                  name="email"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="john.doe@example.com"
                   required
@@ -139,6 +153,7 @@
               <input
                 type="text"
                 id="email"
+                name="subject"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="Your Subject"
                 required
@@ -153,10 +168,13 @@
               <textarea
                 id="message"
                 rows="4"
+                name="message"
                 class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="Write your thoughts here..."
-              ></textarea>
+              >
+              </textarea>
             </div>
+
             <button
               type="submit"
               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 shadow-lg"
