--- a/app/templates/snippets/about.html
+++ b/app/templates/snippets/about.html
@@ -362,7 +362,8 @@
           <li class="mb-10 ms-4">
             <div
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
-            ></div>
+            >
+          </div>
             <time
               class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
               >{{educt.date}}</time
@@ -374,53 +375,27 @@
               class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"
             >
               {{educt.description}}
-            </p>
-          </li>
-
+            </p> 
+          </li> 
           {% endfor %}
-        </ol>
+        </ol> 
       </div>
+
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
         <h3 class="text-2xl font-semibold text-slate-600 mb-8">
           // Experience
         </h3>
 
         <ol class="relative border-s border-gray-200 dark:border-gray-700">
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
-            ></div>
-            <time
-              class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-              >2022 - 2023</time
-            >
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              Self-Employed
-            </h3>
-            <p
-              class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"
-            >
-              Entrepreneur dalam bidang kuliner selama [tahun]. Bertanggung
-              jawab atas pengelolaan operasional, pemasaran, dan penjualan
-              produk.
-            </p>
-          </li>
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
-            ></div>
-            <time
-              class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-              >Agustus 2020 - Mei 2021</time
-            >
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              Supply Operations Coordinator
-            </h3>
-            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-              aliquid at quisquam.
-            </p>
-          </li>
+          {% for exp in experience %}
+            <li class="mb-10 ms-4">
+              <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white   dark:border-gray-900 dark:bg-gray-700"></div>
+              <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{{exp.exp_date}}</time>  
+              <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{exp.exp_title}}</h3>
+              <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{{exp.exp_description}}</p>
+            </li>
+          {% endfor %}
+          
         </ol>
       </div>
     </div>
