--- a/app/templates/snippets/hero_section.html
+++ b/app/templates/snippets/hero_section.html
@@ -1,24 +1,25 @@
 <!-- Hero section -->
-<section id="home" class="pt-36 pb-16">
+<section id="home" class="pt-36 pb-16 bg-white dark:bg-slate-800">
   <div class="container">
     <div class="flex flex-wrap">
       <div class="w-full self-center px-8 py-4 lg:w-1/2">
         <!-- Welcome message -->
         <h1 class="text-base font-semibold text-teal-500 md:text-xl">
           Selamat Datang, Saya
-          <span class="block font-bold text-gray-800 text-4xl mt-1"
+          <span
+            class="block font-bold text-gray-800 text-4xl mt-1 dark:text-white"
             >Akbar Fitriawan
           </span>
         </h1>
 
         <p
-          class="font-medium text-lg text-blue-950 mb-5 leading-relaxed lg:text-2xl"
+          class="font-medium text-lg text-blue-950 mb-5 leading-relaxed lg:text-2xl dark:text-slate-500"
         >
           Data Scientist & Python Developer
         </p>
 
         <!-- Quote -->
-        <p class="font-medium text-gray-600 mb-10 mx-auto">
+        <p class="font-medium text-gray-600 mb-10 mx-auto dark:text-white">
           A Data Scientist with 1 year experience. I specialize in data analysis
           and applying machine learning to create effective solutions. I am
           ready to contribute and develop in a dynamic environment.
@@ -27,9 +28,9 @@
         <!-- Buttons for portfolio and resume -->
         <div class="px-2 flex space-x-4">
           <a
-            href="/"
+            href="#contact"
             class="bg-indigo-600 text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-indigo-700 transition duration-300 ease-in-out"
-            >Hubungi Saya</a
+            >Contact Me</a
           >
         </div>
       </div>
@@ -38,11 +39,11 @@
           <img
             src="/static/images/akbar.png"
             alt="Akbar"
-            class="max-w-full mx-auto rounded-lg"
+            class="max-w-full mx-auto rounded-lg relative z-10 object-cover"
           />
 
           <span
-            class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125"
+            class="absolute -bottom-0 left-1/2 -translate-x-1/2 md:scale-125"
           >
             <svg
               width="400"
