--- a/app/templates/snippets/about.html
+++ b/app/templates/snippets/about.html
@@ -1,11 +1,12 @@
-<section id="about" class="pt-32 pb-16 bg-white">
+<section id="about" class="pt-32 pb-16 bg-slate-100 dark:bg-slate-900">
   <div class="container">
     <!-- tittle section -->
     <div class="w-full p-4">
-      <div class="max-w-xl mx-auto text-center mb-16">
-        <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">
-          About Me
+      <div class="max-w-xl mx-auto text-center mb-28">
+        <h2 class="text-4xl font-bold text-center text-blue-950 mb-4 dark:text-white">
+          About <span class="text-teal-500">Me</span>
         </h2>
+
       </div>
     </div>
 
@@ -13,50 +14,50 @@
     <div class="flex flex-wrap">
       <!-- Description -->
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
-        <h3 class="text-2xl font-semibold text-slate-600 mb-8">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8 dark:text-white">
           // Background
         </h3>
-        <p class="text-lg text-gray-700 mb-4 md:px-6">
+        <p class="text-lg text-gray-700 mb-4 md:px-6 dark:text-white">
           Hi, I'm <strong>Akbar Fitriawan</strong>, an aspiring Data Scientist
           with a passion for Python programming and machine learning. I enjoy
           solving problems with data and am continually learning new tools and
           techniques in this rapidly growing field.
         </p>
-        <p class="text-lg text-gray-700 mb-4 md:px-6">
+        <p class="text-lg text-gray-700 mb-4 md:px-6 dark:text-white">
           I’ve worked on several personal projects, where I built predictive
           models and explored data visualization. Currently, I am focusing on
           enhancing my skills through online courses and real-world practice.
         </p>
-        <p class="text-lg text-gray-700 mb-4 md:px-6">
+        <p class="text-lg text-gray-700 mb-4 md:px-6 dark:text-white">
           My goal is to apply my growing expertise to meaningful data-driven
           projects and continue my journey in the world of data science.
         </p>
       </div>
 
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
-        <h3 class="text-2xl font-semibold text-slate-600 mb-8">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8 dark:text-white">
           // Personal Details
         </h3>
         <ul class="list-none space-y-4">
           <li class="flex flex-wrap">
-            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Name:</span>
-            <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.name }}</p>
+            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500 dark:text-white">Name:</span>
+            <p class="w-2/3 md:w-3/4 text-gray-700 dark:text-white">{{ personal_details.name }}</p>
           </li>
           <li class="flex flex-wrap">
-            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Age:</span>
-            <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.age }}</p>
+            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500 dark:text-white">Age:</span>
+            <p class="w-2/3 md:w-3/4 text-gray-700 dark:text-white">{{ personal_details.age }}</p>
           </li>
           <li class="flex flex-wrap">
-            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Residence:</span>
-            <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.residence }}</p>
+            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500 dark:text-white">Residence:</span>
+            <p class="w-2/3 md:w-3/4 text-gray-700 dark:text-white">{{ personal_details.residence }}</p>
           </li>
           <li class="flex flex-wrap">
-            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Email:</span>
-            <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.email }}</p>
+            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500 dark:text-white">Email:</span>
+            <p class="w-2/3 md:w-3/4 text-gray-700 dark:text-white">{{ personal_details.email }}</p>
           </li>
           <li class="flex flex-wrap">
-            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500">Telephone:</span>
-            <p class="w-2/3 md:w-3/4 text-gray-700">{{ personal_details.phone }}</p>
+            <span class="w-1/3 md:w-1/4 font-semibold text-gray-500 dark:text-white">Telephone:</span>
+            <p class="w-2/3 md:w-3/4 text-gray-700 dark:text-white">{{ personal_details.phone }}</p>
           </li>
         </ul>
       </div>
@@ -72,10 +73,10 @@
 
     <div class="flex flex-wrap">
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
-        <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Skills</h3>
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8 dark:text-white">// Skills</h3>
 
         <div class="w-full p-2">
-          <h3 class="text-lg font-semibold mb-4">Programming Languages</h3>
+          <h3 class="text-lg font-semibold mb-4 dark:text-white">Programming Languages</h3>
           
           <div class="grid grid-cols-2 gap-4 mb-6 md:grid-cols-4">
             <div class="bg-gray-200 p-2 rounded-lg  items-center justify-center flex flex-wrap">
@@ -126,7 +127,7 @@
         </div>
 
         <div class="w-full p-2">
-          <h3 class="text-lg font-semibold mb-4">Frameworks & Libraries</h3>
+          <h3 class="text-lg font-semibold mb-4 dark:text-white">Frameworks & Libraries</h3>
           <div class="flex flex-wrap">
             <div class="grid grid-cols-2 gap-4 mb-6 md:grid-cols-4">
 
@@ -246,7 +247,7 @@
         </div>
 
         <div class="p-0">
-          <h3 class="text-lg font-semibold mb-4">Featured Skills</h3>
+          <h3 class="text-lg font-semibold mb-4 dark:text-white">Featured Skills</h3>
           <div class="w-full p-2">
             <div class="grid grid-cols-1 gap-4 mb-6 md:grid-cols-2">
 
@@ -289,7 +290,7 @@
         </div>
 
         <div>
-          <h3 class="text-lg font-semibold mb-4">Expertise as Data Scientist</h3>
+          <h3 class="text-lg font-semibold mb-4 dark:text-white">Expertise as Data Scientist</h3>
           <span class="inline-block bg-blue-100 text-blue-800 text-md font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800">
             Min. 1 year
           </span>
@@ -299,7 +300,7 @@
 
 
       <div class="w-full lg:w-1/2 px-4 py-6 mb-8">
-        <h3 class="text-2xl font-semibold text-slate-600 mb-6">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-6 dark:text-white">
           // Certificates
         </h3>
       
@@ -307,8 +308,8 @@
           {% for cert in certificates %}
           <li class="flex flex-wrap justify-between">
             <div class="w-full lg:w-3/4">
-              <h4 class="font-semibold text-gray-800">{{ cert.title }}</h4>
-              <p class="text-sm text-gray-600">
+              <h4 class="font-semibold text-gray-800 dark:text-white">{{ cert.title }}</h4>
+              <p class="text-sm text-gray-600 dark:text-slate-200">
                 {{ cert.organization }} - {{ cert.date }}
               </p>
               {% if cert.transcript %}
@@ -355,7 +356,7 @@
     <!-- about 3 -->
     <div class="flex flex-wrap">
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
-        <h3 class="text-2xl font-semibold text-slate-600 mb-8">// Education</h3>
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8 dark:text-white">// Education</h3>
 
         <ol class="relative border-s border-gray-200 dark:border-gray-700">
           {% for educt in educations %}
@@ -365,7 +366,7 @@
             >
           </div>
             <time
-              class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+              class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-200"
               >{{educt.date}}</time
             >
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
@@ -382,15 +383,15 @@
       </div>
 
       <div class="w-full lg:w-1/2 px-4 py-3 mb-8">
-        <h3 class="text-2xl font-semibold text-slate-600 mb-8">
+        <h3 class="text-2xl font-semibold text-slate-600 mb-8 dark:text-white">
           // Experience
         </h3>
 
         <ol class="relative border-s border-gray-200 dark:border-gray-700">
-          {% for exp in experience %}
+          {% for exp in experiance %}
             <li class="mb-10 ms-4">
               <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white   dark:border-gray-900 dark:bg-gray-700"></div>
-              <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{{exp.exp_date}}</time>  
+              <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-200">{{exp.exp_date}}</time>  
               <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{exp.exp_title}}</h3>
               <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{{exp.exp_description}}</p>
             </li>
