--- a/app/templates/snippets/blog.html
+++ b/app/templates/snippets/blog.html
@@ -1,14 +1,20 @@
-<section id="blog" class="pt-32 pb-16 bg-slate-100">
+<section id="blog" class="pt-32 pb-16 bg-slate-100 dark:bg-slate-900">
   <div class="container">
     <div class="w-full px-4">
       <div class="max-w-xl mx-auto text-center mb-16">
-        <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">Blog</h2>
+        <h2
+          class="text-4xl font-bold text-center text-blue-950 mb-10 dark:text-white"
+        >
+          Blo<span class="text-teal-500">g</span>
+        </h2>
       </div>
     </div>
 
     <div class="flex flex-wrap justify-center">
       <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-        <div class="rounded-xl overflow-hidden shadow-lg mb-10">
+        <div
+          class="rounded-xl overflow-hidden shadow-lg mb-10 dark:bg-slate-800 dark:bg-slate-800"
+        >
           <img
             src="{{ url_for('static', filename='images/news.jpg') }}"
             alt="news"
@@ -18,12 +24,12 @@
             <h3>
               <a
                 href="#"
-                class="block font-semibold text-xl hover:text-teal-600 truncate"
+                class="block font-semibold text-xl hover:text-teal-600 truncate dark:text-slate-100"
                 >Tips Belajar Programming</a
               >
             </h3>
             <p
-              class="font-medium text-base text-slate-800 truncate:22 py-4 mb-6"
+              class="font-medium text-base text-slate-800 truncate:22 py-4 mb-6 dark:text-slate-100"
             >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
               vero!
@@ -38,7 +44,9 @@
         </div>
       </div>
       <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-        <div class="rounded-xl overflow-hidden shadow-lg mb-10">
+        <div
+          class="rounded-xl overflow-hidden shadow-lg mb-10 dark:bg-slate-800"
+        >
           <img
             src="{{ url_for('static', filename='images/news.jpg') }}"
             alt="news"
@@ -48,12 +56,12 @@
             <h3>
               <a
                 href="#"
-                class="block font-semibold text-xl hover:text-teal-600 truncate"
+                class="block font-semibold text-xl hover:text-teal-600 truncate dark:text-slate-100"
                 >Tips Belajar Programming</a
               >
             </h3>
             <p
-              class="font-medium text-base text-slate-800 truncate:22 py-4 mb-6"
+              class="font-medium text-base text-slate-800 truncate:22 py-4 mb-6 dark:text-slate-100"
             >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
               vero!
@@ -68,7 +76,9 @@
         </div>
       </div>
       <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-        <div class="rounded-xl overflow-hidden shadow-lg mb-10">
+        <div
+          class="rounded-xl overflow-hidden shadow-lg mb-10 dark:bg-slate-800"
+        >
           <img
             src="{{ url_for('static', filename='images/news.jpg') }}"
             alt="news"
@@ -78,12 +88,12 @@
             <h3>
               <a
                 href="#"
-                class="block font-semibold text-xl hover:text-teal-600 truncate"
+                class="block font-semibold text-xl hover:text-teal-600 truncate dark:text-slate-100"
                 >Tips Belajar Programming</a
               >
             </h3>
             <p
-              class="font-medium text-base text-slate-800 truncate:22 py-4 mb-6"
+              class="font-medium text-base text-slate-800 truncate:22 py-4 mb-6 dark:text-slate-100"
             >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
               vero!
