--- a/app/templates/snippets/contact.html
+++ b/app/templates/snippets/contact.html
@@ -1,16 +1,20 @@
-<section id="contact" class="pt-32 pb-16">
+<section id="contact" class="pt-32 pb-16 bg-white dark:bg-slate-800">
   <div class="container">
     <div class="w-full px-4">
       <div class="max-w-xl mx-auto text-center mb-16">
-        <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">
-          Contact Me
+        <h2
+          class="text-4xl font-bold text-center text-blue-950 mb-10 dark:text-white"
+        >
+          Contact <span class="text-teal-500">Me</span>
         </h2>
       </div>
 
       <div class="w-full flex flex-wrap">
         <div class="mb-12 justify-center md:w-1/2 mx-auto px-8">
-          <h3 class="font-semibold text-xl py-4">Get in Touch</h3>
-          <p class="font-medium text-base mb-5 w-full lg:w-1/2">
+          <h3 class="font-semibold text-xl py-4 dark:text-white">
+            Get in Touch
+          </h3>
+          <p class="font-medium text-base mb-5 w-full lg:w-1/2 dark:text-white">
             Fill out the form below to get in touch with me. I'm always excited
             to hear about new opportunities and I'll do my best to respond to
             your inquiry within 24 hours.
@@ -18,13 +22,23 @@
 
           <div class="flex items-center space-x-3 py-3">
             <span class="material-icons">
-              <img
-                class="w-[32px] h-[32px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/map-pin.svg') }}"
-                alt="map-pin"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
             </span>
-            <p class="w-full lg:w-1/2">
+            <p class="w-full lg:w-1/2 dark:text-white">
               Jl. Jaha Gg. Sa'ian RT 09 RW 01, Cilandak Timur, Jakarta Selatan
               Indonesia
             </p>
@@ -32,69 +46,125 @@
 
           <div class="flex items-center space-x-3 py-3">
             <span class="material-icons">
-              <img
-                class="w-[32px] h-[32px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/headphone.svg') }}"
-                alt="headphone"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M7.978 4a2.553 2.553 0 0 0-1.926.877C4.233 6.7 3.699 8.751 4.153 10.814c.44 1.995 1.778 3.893 3.456 5.572 1.68 1.679 3.577 3.018 5.57 3.459 2.062.456 4.115-.073 5.94-1.885a2.556 2.556 0 0 0 .001-3.861l-1.21-1.21a2.689 2.689 0 0 0-3.802 0l-.617.618a.806.806 0 0 1-1.14 0l-1.854-1.855a.807.807 0 0 1 0-1.14l.618-.62a2.692 2.692 0 0 0 0-3.803l-1.21-1.211A2.555 2.555 0 0 0 7.978 4Z"
+                />
+              </svg>
             </span>
-            <p>+6285156919521</p>
+            <p class="dark:text-white">+6285156919521</p>
           </div>
           <div class="flex items-center space-x-3 py-3">
             <span class="material-icons">
-              <img
-                class="w-[32px] h-[32px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/email.svg') }}"
-                alt="email.svg"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-width="2"
+                  d="m3.5 5.5 7.893 6.036a1 1 0 0 0 1.214 0L20.5 5.5M4 19h16a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"
+                />
+              </svg>
             </span>
-            <p>akbarfitriawan12@gmail.com</p>
+            <p class="dark:text-white">akbarfitriawan12@gmail.com</p>
           </div>
-          <h3 class="font-semibold text-xl py-4">Socials</h3>
+          <h3 class="font-semibold text-xl py-4 dark:text-white">Socials</h3>
           <div class="flex space-x-4 mb-4">
             <a
               href="/"
               target="_blank"
-              class="mr-3 flex h-9 w-9 items-center justify-center rounded-lg border border-slate-600 hover:bg-blue-900 hover:border-white shadow-md opacity-80"
+              class="flex h-9 w-9 items-center justify-center rounded-full border border-slate-600 shadow-md opacity-80"
             >
-              <img
-                class="w-[25px] h-[25px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/x.svg') }}"
-                alt="x"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M13.795 10.533 20.68 2h-3.073l-5.255 6.517L7.69 2H1l7.806 10.91L1.47 22h3.074l5.705-7.07L15.31 22H22l-8.205-11.467Zm-2.38 2.95L9.97 11.464 4.36 3.627h2.31l4.528 6.317 1.443 2.02 6.018 8.409h-2.31l-4.934-6.89Z"
+                />
+              </svg>
             </a>
             <a
               href="#"
               target="_blank"
-              class="mr-3 flex h-9 w-9 items-center justify-center rounded-lg border border-slate-600 hover:bg-blue-900 hover:border-white shadow-md opacity-80"
+              class="flex h-9 w-9 items-center justify-center rounded-full border border-slate-600 shadow-md opacity-80"
             >
-              <img
-                class="w-[25px] h-[25px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/discord.svg') }}"
-                alt="discord"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M18.942 5.556a16.3 16.3 0 0 0-4.126-1.3 12.04 12.04 0 0 0-.529 1.1 15.175 15.175 0 0 0-4.573 0 11.586 11.586 0 0 0-.535-1.1 16.274 16.274 0 0 0-4.129 1.3 17.392 17.392 0 0 0-2.868 11.662 15.785 15.785 0 0 0 4.963 2.521c.41-.564.773-1.16 1.084-1.785a10.638 10.638 0 0 1-1.706-.83c.143-.106.283-.217.418-.331a11.664 11.664 0 0 0 10.118 0c.137.114.277.225.418.331-.544.328-1.116.606-1.71.832a12.58 12.58 0 0 0 1.084 1.785 16.46 16.46 0 0 0 5.064-2.595 17.286 17.286 0 0 0-2.973-11.59ZM8.678 14.813a1.94 1.94 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.918 1.918 0 0 1 1.8 2.047 1.929 1.929 0 0 1-1.8 2.045Zm6.644 0a1.94 1.94 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.919 1.919 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Z"
+                />
+              </svg>
             </a>
             <a
               href="#"
               target="_blank"
-              class="mr-3 flex h-9 w-9 items-center justify-center rounded-lg border border-slate-600 hover:bg-blue-900 hover:border-white shadow-md opacity-80"
+              class="flex h-9 w-9 items-center justify-center rounded-full border border-slate-600 shadow-md opacity-80"
             >
-              <img
-                class="w-[25px] h-[25px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/linkdin.svg') }}"
-                alt="linkdin"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12.51 8.796v1.697a3.738 3.738 0 0 1 3.288-1.684c3.455 0 4.202 2.16 4.202 4.97V19.5h-3.2v-5.072c0-1.21-.244-2.766-2.128-2.766-1.827 0-2.139 1.317-2.139 2.676V19.5h-3.19V8.796h3.168ZM7.2 6.106a1.61 1.61 0 0 1-.988 1.483 1.595 1.595 0 0 1-1.743-.348A1.607 1.607 0 0 1 5.6 4.5a1.601 1.601 0 0 1 1.6 1.606Z"
+                  clip-rule="evenodd"
+                />
+                <path d="M7.2 8.809H4V19.5h3.2V8.809Z" />
+              </svg>
             </a>
             <a
               href="#"
               target="_blank"
-              class="mr-3 flex h-9 w-9 items-center justify-center rounded-lg border border-slate-600 hover:bg-blue-900 hover:border-white shadow-md opacity-80"
+              class="flex h-9 w-9 items-center justify-center rounded-full border border-slate-600 shadow-md opacity-80"
             >
-              <img
-                class="w-[25px] h-[25px] grayscale"
-                src="{{ url_for('static', filename='/images/icons/github.svg') }}"
-                alt="github"
-              />
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
             </a>
           </div>
         </div>
@@ -111,7 +181,7 @@
             {% endif %} {% endwith %}
           </div>
 
-          <form action="{{ url_for('main.send_message') }}" method="POST">
+          <form action="https://getform.io/f/bpjmwdwb" method="post">
             <div class="grid gap-2 mb-6 md:grid-cols-2">
               <div>
                 <label
@@ -167,8 +237,8 @@
               >
               <textarea
                 id="message"
-                rows="4"
                 name="message"
+                rows="4"
                 class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="Write your thoughts here..."
               >
@@ -180,71 +250,18 @@
               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 shadow-lg"
             >
               <span>
-                <svg
+                <img
                   width="16"
                   height="16"
                   class="w-[25px] h-[25px] grayscale inline-block"
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  version="1.1"
-                  width="256"
-                  height="256"
-                  viewBox="0 0 256 256"
-                  xml:space="preserve"
-                >
-                  <defs></defs>
-                  <g
-                    style="
-                      stroke: none;
-                      stroke-width: 0;
-                      stroke-dasharray: none;
-                      stroke-linecap: butt;
-                      stroke-linejoin: miter;
-                      stroke-miterlimit: 10;
-                      fill: none;
-                      fill-rule: nonzero;
-                      opacity: 1;
-                    "
-                    transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
-                  >
-                    <path
-                      d="M 83.924 7.756 L 4.202 38.496 c -5.442 2.183 -5.409 5.219 -0.992 6.571 l 20.455 6.385 l 7.035 23.153 c 0.925 2.553 0.469 3.566 3.151 3.566 c 2.069 0 2.983 -0.946 4.138 -2.069 l 9.941 -9.666 l 20.681 15.28 c 3.806 2.1 6.553 1.012 7.501 -3.533 l 13.577 -63.978 C 91.079 8.631 87.565 6.103 83.924 7.756 z"
-                      style="
-                        stroke: none;
-                        stroke-width: 1;
-                        stroke-dasharray: none;
-                        stroke-linecap: butt;
-                        stroke-linejoin: miter;
-                        stroke-miterlimit: 10;
-                        fill: rgb(33, 151, 201);
-                        fill-rule: nonzero;
-                        opacity: 1;
-                      "
-                      transform=" matrix(1 0 0 1 0 0) "
-                      stroke-linecap="round"
-                    />
-                    <path
-                      d="M 33.942 72.016 l -6.747 -22.204 L 79.13 19.002 L 40.751 56.789 L 33.942 72.016 z"
-                      style="
-                        stroke: none;
-                        stroke-width: 1;
-                        stroke-dasharray: none;
-                        stroke-linecap: butt;
-                        stroke-linejoin: miter;
-                        stroke-miterlimit: 10;
-                        fill: rgb(255, 255, 255);
-                        fill-rule: nonzero;
-                        opacity: 1;
-                      "
-                      transform=" matrix(1 0 0 1 0 0) "
-                      stroke-linecap="round"
-                    />
-                  </g>
-                </svg>
+                  src="{{ url_for('static', filename='/images/icons/pepar-plane.svg') }}"
+                  alt="pepar-plane"
+                />
               </span>
               Send Message
             </button>
           </form>
+          <p id="status-message"></p>
         </div>
       </div>
     </div>
