--- a/app/templates/snippets/footer.html
+++ b/app/templates/snippets/footer.html
@@ -1,5 +1,5 @@
-<footer class="bg-slate-800 dark:bg-gray-800 pt-6">
-  <div class="container mx-auto flex flex-col items-center p-5 text-white">
+<footer class="bg-slate-800 dark:bg-dark pt-6">
+  <div class="container mx-auto flex flex-col p-5 text-white">
     <!-- Copyright text -->
     <p class="text-center text-sm">
       Copyright &copy; {{ current_year }}
@@ -11,5 +11,10 @@
       <a href="#" class="hover:underline">Terms & Policy</a>
       <a href="#" class="hover:underline">Disclaimer</a>
     </div>
+
+    <p class="text-sm text-center">
+      Created using <span class="text-blue-500">tailwindcss</span> &
+      <span class="text-amber-400">flask</span>
+    </p>
   </div>
 </footer>
