--- a/app/templates/snippets/portfolio.html
+++ b/app/templates/snippets/portfolio.html
@@ -1,11 +1,13 @@
 <!-- Portfolio -->
 
-<section id="portfolio" class="pt-32 pb-16 bg-slate-200">
+<section id="portfolio" class="pt-32 pb-16 bg-white dark:bg-slate-800">
   <div class="container">
     <div class="w-full px-4">
-      <div class="max-w-xl mx-auto text-center mb-16">
-        <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">
-          Portfolio
+      <div class="max-w-xl mx-auto text-center mb-28">
+        <h2
+          class="text-4xl font-bold text-center text-blue-950 mb-10 dark:text-white"
+        >
+          Port<span class="text-teal-500">folio</span>
         </h2>
       </div>
     </div>
@@ -20,8 +22,10 @@
             alt=""
           />
         </div>
-        <h3 class="font-semibold text-xl mt-5 mb-3">Project s</h3>
-        <p class="font-medium text-base">
+        <h3 class="font-semibold text-xl mt-5 mb-3 dark:text-white">
+          Project s
+        </h3>
+        <p class="font-medium text-base dark:text-slate-200">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
           voluptatum cum nemo veniam explicabo, officia obcaecati dolor ut nobis
           aliquid.
@@ -34,8 +38,10 @@
             alt=""
           />
         </div>
-        <h3 class="font-semibold text-xl mt-5 mb-3">Project s</h3>
-        <p class="font-medium text-base">
+        <h3 class="font-semibold text-xl mt-5 mb-3 dark:text-white">
+          Project s
+        </h3>
+        <p class="font-medium text-base dark:text-slate-200">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
           voluptatum cum nemo veniam explicabo, officia obcaecati dolor ut nobis
           aliquid.
@@ -48,8 +54,10 @@
             alt=""
           />
         </div>
-        <h3 class="font-semibold text-xl mt-5 mb-3">Project s</h3>
-        <p class="font-medium text-base">
+        <h3 class="font-semibold text-xl mt-5 mb-3 dark:text-white">
+          Project s
+        </h3>
+        <p class="font-medium text-base dark:text-slate-200">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
           voluptatum cum nemo veniam explicabo, officia obcaecati dolor ut nobis
           aliquid.
@@ -62,8 +70,10 @@
             alt=""
           />
         </div>
-        <h3 class="font-semibold text-xl mt-5 mb-3">Project s</h3>
-        <p class="font-medium text-base">
+        <h3 class="font-semibold text-xl mt-5 mb-3 dark:text-white">
+          Project s
+        </h3>
+        <p class="font-medium text-base dark:text-slate-200">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
           voluptatum cum nemo veniam explicabo, officia obcaecati dolor ut nobis
           aliquid.
