--- a/app/templates/snippets/services.html
+++ b/app/templates/snippets/services.html
@@ -5,6 +5,11 @@
         <h2 class="text-4xl font-bold text-center text-teal-600 mb-10">
           Services
         </h2>
+        <hr />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum rerum
+          vitae sit!
+        </p>
       </div>
     </div>
 
